tests/eval/snapshots/file_tests__eval__truthiness.lx.snap
---
source: tests/eval.rs
description: "print !!42;\nprint !!nil;\nprint !!false;\nprint !!\"lol\";\n"
expression: combined
---
:: Output ::
true
false
false
true
